--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-Flask==0.10.1
-flask_bootstrap==3.0.3.1
-Flask-Mail==0.9.0
-Flask-Migrate==1.1.0
-Flask-Moment==0.2.0
-Flask-SQLAlchemy==1.0
-Flask-Script==0.6.6
-Flask-WTF==0.9.4
-Jinja2==2.7.1
-Mako==0.9.1
-MarkupSafe==0.18
-SQLAlchemy==0.8.4
-WTForms==1.0.5
-Werkzeug==0.9.4
-alembic==0.6.2
-blinker==1.3
-itsdangerous==0.23
+Flask>=0.11.1
+flask_bootstrap>=3.3.7.0
+Flask-Mail>=0.9.1
+Flask-Migrate>=2.0.0
+Flask-Moment>=0.5.1
+Flask-SQLAlchemy>=2.1
+Flask-Script>=0.6.6
+Flask-WTF>=0.13.1
+Jinja2>=2.7.1
+Mako>=0.9.1
+MarkupSafe>=0.18
+SQLAlchemy>=0.8.4
+WTForms>=1.0.5
+Werkzeug>=0.9.4
+alembic>=0.6.2
+blinker>=1.3
+itsdangerous>=0.23
