--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask>=0.11.1
 flask_bootstrap>=3.3.7.0
 Flask-Mail>=0.9.1
+Flask-Login>=0.4.0
 Flask-Migrate>=2.0.0
 Flask-Moment>=0.5.1
 Flask-SQLAlchemy>=2.1
