--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ Werkzeug>=0.9.4
 alembic>=0.6.2
 blinker>=1.3
 itsdangerous>=0.23
+ForgeryPy>=0.1
+Flask-PageDown>=0.2.2
+markdown>=2.6.7
+bleach>=1.5.0
