--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Moment>=0.5.1
 Flask-SQLAlchemy>=2.1
 Flask-Script>=0.6.6
 Flask-WTF>=0.13.1
+Flask-Avatar>=0.1.2
 Jinja2>=2.7.1
 Mako>=0.9.1
 MarkupSafe>=0.18
