--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,11 @@ Werkzeug>=0.9.4
 alembic>=0.6.2
 blinker>=1.3
 itsdangerous>=0.23
-ForgeryPy>=0.1
 Flask-PageDown>=0.2.2
 markdown>=2.6.7
 bleach>=1.5.0
+wheezy.captcha>=0.1.44
+Flask-HTTPAuth>=3.2.1
+ForgeryPy>=0.1
+httpie>=0.9.6
+coverage>=4.2
